# algorithm

./: Makefile  Makefilemodle  README.md  git.txt  main.c  main.cpp
binary/: CMakeLists.txt  Makefile
binary/binarylib/: binary.cpp
binary/include/: binary.h
binary/scr/: Makefile  binary.cpp
binary/src/: CMakeLists.txt  main.cpp
binary/testlib/: CMakeLists.txt
c&c++/: Makefile  READMD  exe  main.c  main.cpp  test.c  test.h  test1
c&c++/libtest/: hello.c  mid.cpp  test
c++/: log  test.cpp  world.cpp
cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
cmake/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
lua/Wrap/: Wrap.h  dispatcher.lua  func.cpp  main.cpp  test
lua/algorithm/: lib.lua
lua/lua-protobuf/: start.sh
lua/regeng/: main.lua  test.lua
lua/testlua/: E_luatest  hello.lua  main.cpp  test  test.cpp  test.lua
lua/testlua2/: .hello.lua.swp  E_luatest  Makefile  hello.lua  main.cpp
lua/testlua3/: 3.lua  E_luatest  main.cpp  test.lua
lua/testlua4/: E_luatest  Makefile  README.md  main.cpp  test.c  test.lua
lua/testlua5/: README.md  main.cpp  test.lua
lua/testlua6/: E_luatest  README.md  main.cpp  test.lua
lua/testlua7/: Makefile  README.md  main.cpp  test.lua
lua/testlua8/: Array.lua  Makefile  README.md  main.cpp
proto/: lua-protobuf.tar
pthread/: a.out  download.c
python/: README.md  player.py  player.txt
python/protobuf/: person_info.proto  person_info_pb2.py  test.proto  test.py  test_pb2.py
python/robot/python/: run  (+9 more)
test/: Makefilemodle  git.txt  main.c
weixin/: test.py
(+16 files in other folders)
